intercom-attributes/tests/data/ui/span-comclass-unknown-interface.rs.stderr
error[E0405]: cannot find trait `IDoesNotExist` in this scope
 --> span-comclass-unknown-interface.rs:5:13
  |
5 | #[com_class(IDoesNotExist)]
  |             ^^^^^^^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0405`.
